<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ConfigureGraphics</class>
 <widget class="QWidget" name="ConfigureGraphics">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
        <string>Graphics</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
           <widget class="QCheckBox" name="toggle_frame_limit">
            <property name="text">
             <string>Limit Speed Percent</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QSpinBox" name="frame_limit">
            <property name="suffix">
             <string>%</string>
            </property>
            <property name="minimum">
             <number>1</number>
            </property>
            <property name="maximum">
             <number>9999</number>
            </property>
            <property name="value">
             <number>100</number>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <widget class="QCheckBox" name="use_accurate_gpu_emulation">
          <property name="text">
           <string>Use accurate GPU emulation (slow)</string>
          </property>
         </widget>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Internal Resolution</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QComboBox" name="resolution_factor_combobox">
            <item>
             <property name="text">
              <string>Auto (Window Size)</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Native (1280x720)</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>2x Native (2560x1440)</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>3x Native (3840x2160)</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>4x Native (5120x2880)</string>
             </property>
            </item>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_6">
          <item>
           <widget class="QLabel" name="bg_label">
            <property name="text">
             <string>Background Color:</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="bg_button">
            <property name="maximumSize">
             <size>
              <width>40</width>
              <height>16777215</height>
             </size>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
